# RTS2-Synthesizer

./: .gitignore  CMakeLists.txt  README.md  main.c  shared.h
KeyboardEvents/: CMakeCache.txt  Main.c  a.out  inputThread.c
Sounds/: KeyboardMonitor.c  KeyboardMonitor.h  Main.c  SoundManager.c  SoundManager.h
src/: ADSR.c  ADSR.h  SoundManager.c  SoundManager.h  audioThread.c  audioThread.h  filter.c  filter.h  filterThread.c  filterThread.h  inputThread.c  inputThread.h  main.c  oscillatorThread.c  oscillatorThread.h  shared.h  volumeThread.c  volumeThread.h  waveGenerator.c  waveGenerator.h
